--- a/src/stylesNew.css
+++ b/src/stylesNew.css
@@ -2,3 +2,17 @@
     color: yellow;
     font-size: 16px;
 }
+.fetch_list{
+    list-style-type: none;
+}
+.fetch_list li{
+    width: 30%;
+    display: inline-grid;
+    height: 300px;
+    border: 1px solid #fff;
+}
+.fetch_list li img{
+    margin: auto;
+    width: 150px;
+    height: 150px;
+}
