--- a/src/stylesNew.css
+++ b/src/stylesNew.css
@@ -1,6 +1,29 @@
+nav {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    right: 0;
+    background: rgba(0,0,0,0.8);
+}
+.nav_menu{
+    list-style: none;
+}
+.nav_menu li {
+    display: inline-block;
+    width: 25%;
+}
+.nav_menu li a{
+    color: #c9c9d7;
+    text-decoration: none;
+}
+
 .list{
     color: yellow;
     font-size: 16px;
+}
+button.MuiButtonBase-root.MuiButton-root.MuiButton-contained.MuiButton-containedPrimary {
+    height: 22px;
+    margin-top: 2px;
 }
 .fetch_list{
     list-style-type: none;
